<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BlogR</string>
    <string name="action_settings">Settings</string>
    <string name="action_publish">Publish</string>
    <string name="action_title">Title</string>
    <string name="action_insert">Insert</string>
    <string name="action_new">New</string>
    <string name="action_delete">Delete</string>
    <string name="customtext">your text here</string>
    <string name="latitude">latitude </string>
    <string name="longitude">longitude </string>
    <string name="altitude">altitude </string>
    <string name="newpost">New Post</string>
    <string name="postlist_emptytext">No Post</string>
    <string name="action_insert_flickr">Picture from Flickr</string>
    <string name="action_insert_gallery">Picture from Gallery</string>
    <string name="action_insert_location">Location</string>
    <string name="post_content_hint">Have a story to share today?</string>
    <string name="pick_picture">Pick a picture</string>
    <string name="cancel">Cancel</string>
    <string name="no_access_flickr">Pictures could not be loaded from Flickr. Check your connection, your username in the settings and try again later.</string>
    <string name="action_save">Save</string>
    <string name="no_location_provider">No precise provider is available for the location. Please enable your GPS or your phone network.</string>
    <string name="location_in_progress">Location is getting acquired, you will be notified when available.</string>
    <string name="location_available">location available, you can now insert it.</string>
    <string name="hint_blog_name">My Blog</string>
    <string name="hint_recipient_email">recipient : mum@domain.com</string>
    <string name="hint_github_username">Github username</string>
    <string name="action_new_blog">New Blog</string>
    <string name="github_blog">Github Pages</string>
    <string name="tp_blog">Traveller\'s Point</string>
    <string name="email_blog">Emails</string>
    <string name="action_manage_blog">Manage blog</string>
    <string name="pick_blog">Pick a blog</string>
    <string name="action_align">Align</string>
    <string name="action_align_left">Left</string>
    <string name="action_align_center">Center</string>
    <string name="action_align_right">Right</string>
    <string name="not_connected">Your device does not seem connected to the Internet</string>
    <string name="disabled_download">Connection to the server is currently disabled. Please enable it in the settings and try again</string>
    <string name="toast_cannot_clone">The git repository for your Github Pages blog could not be retrieved. Please make sure you have created an account on github.com and try again</string>
    <string name="blog_already_exists">This blog already exists</string>
    <string name="git_credentials">Git credentials :</string>
    <item name="activity_newpost_title" type="id">New Post</item>
    <string name="action_metadata" type="id">update_metadata</string>
    <string name="hint_md_keys">Metadata keys (e.g. title, layout)</string>
    <string name="pick_address">Please pick an address</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="feature">Feature</string>
    <string name="action_insert_picture">Picture</string>
    <string name="ok">OK</string>
    <string name="type_flickr_code">Type code</string>
    <string name="action_wiki_link">Link to Wikipedia</string>
</resources>
