<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:padding="8dp"
        android:gravity="left"
        android:id="@+id/md_key"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="?android:attr/activatedBackgroundIndicator"
        android:layout_weight="1"
        android:minWidth="200dp"
        android:inputType="text"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:padding="8dp"
        android:gravity="right"
        android:id="@+id/md_value"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="?android:attr/activatedBackgroundIndicator"
        android:layout_weight="1"
        android:minWidth="200dp"
        android:inputType="text"
        />
</LinearLayout>